click based flip flop

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,9 @@
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
             </form>
+            <button id="click" class="btn btn-default" type="submit">Click</button>
+            <input type="text" id="w" class="form-control" placeholder="W">
+            <input type="text" id="h" class="form-control" placeholder="H">
         </div>
     </div>
     <div class="row">
