communication socket enabled

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,6 +51,11 @@
             </table>
         </div>
     </div>
+
+    <button id="ffConnect" class="btn btn-default" type="submit">ffConnect</button>
+    <button id="ffStart" class="btn btn-default" type="submit">ffStart</button>
+    <button id="ffFlip" class="btn btn-default" type="submit">ffFlip</button>
+
 </div>
 </body>
 </html>
