--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,6 +55,8 @@
     <button id="ffConnect" class="btn btn-default" type="submit">ffConnect</button>
     <button id="ffStart" class="btn btn-default" type="submit">ffStart</button>
     <button id="ffFlip" class="btn btn-default" type="submit">ffFlip</button>
+    <div>Seperation Line-----------------------------------------------------------------------</div>
+    <div id = "boardTable"></div>
 
 </div>
 </body>
